- Many new functionalities added, like: Async request of covers, Sync of album retrieval, Facebook support to find radio logo. - Unit tests added for all new functionalities.